[workspace]
members = [
	"frame/base-fee",
	"frame/dynamic-fee",
	"frame/ethereum",
	"frame/evm",
	"frame/evm-chain-id",
	"frame/hotfix-sufficients",
	"frame/evm/precompile/sha3fips",
	"frame/evm/precompile/simple",
	"frame/evm/precompile/modexp",
	"frame/evm/precompile/ed25519",
	"frame/evm/precompile/bn128",
	"frame/evm/precompile/blake2",
	"frame/evm/precompile/bw6761",
	"frame/evm/precompile/bls12377",
	"frame/evm/precompile/bls12381",
	"frame/evm/precompile/dispatch",
	"frame/evm/precompile/curve25519",
	"client/api",
	"client/consensus",
	"client/rpc-core",
	"client/rpc",
	"client/db",
	"client/storage",
	"client/mapping-sync",
	"client/bool-network/evm-tracing",
	"client/bool-network/rpc-core/types",
	"client/bool-network/rpc-core/trace",
	"client/bool-network/rpc-core/debug",
	"client/bool-network/rpc-core/txpool",
	"client/bool-network/rpc/debug",
	"client/bool-network/rpc/trace",
	"client/bool-network/rpc/txpool",
	"primitives/account",
	"primitives/consensus",
	"primitives/dynamic-fee",
	"primitives/evm",
	"primitives/rpc",
	"primitives/self-contained",
	"primitives/bool-network/ext",
	"primitives/bool-network/rpc/evm-tracing-events",
	"primitives/bool-network/rpc/debug",
	"primitives/bool-network/rpc/txpool",
	"runtime/evm-tracer",
	"template/node",
	"template/runtime",
	"precompiles",
	"precompiles/macro",
	"precompiles/tests-external",
]
resolver = "2"

[workspace.package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
repository = "https://github.com/paritytech/frontier/"

[workspace.dependencies]
async-trait = "0.1"
bn = { package = "substrate-bn", version = "0.6", default-features = false }
clap = { version = "4.4.12", features = ["derive", "deprecated"] }
derive_more = "0.99"
environmental = { version = "1.1.4", default-features = false }
ethereum = { version = "0.15.0", default-features = false }
ethereum-types = { version = "0.14.1", default-features = false }
evm = { version = "0.41.1", default-features = false }
evm-gasometer = { version = "0.41.0", default-features = false }
evm-runtime = { version = "0.41.0", default-features = false }

futures = "0.3.30"
hash-db = { version = "0.16.0", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hex-literal = "0.4.1"
impl-serde = { version = "0.4.0", default-features = false }
impl-trait-for-tuples = "0.2.1"
jsonrpsee = "0.16.3"
kvdb-rocksdb = "0.19.0"
libsecp256k1 = { version = "0.7.1", default-features = false }
log = { version = "0.4.20", default-features = false }
num_enum = { version = "0.7.0", default-features = false }
parity-db = "0.4.12"
parking_lot = "0.12.1"
rlp = { version = "0.5.2", default-features = false }
scale-codec = { package = "parity-scale-codec", version = "3.6.4", default-features = false, features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = "1.0"
similar-asserts = "1.5.0"
sqlx = { version = "0.7.3", default-features = false, features = ["macros"] }
thiserror = "1.0"
tokio = "1.35.1"
sha3 = "0.10"
tracing = "0.1.34"
parity-scale-codec = { version = "3.2.2", default-features = false, features = [
	"derive",
] }
# Substrate Client
sc-basic-authorship = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm" }
sc-block-builder = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm" }
sc-chain-spec = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm" }
sc-cli = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm", default-features = false }
sc-client-api = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm" }
sc-client-db = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm", default-features = false }
sc-consensus = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm" }
sc-consensus-aura = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm" }
sc-consensus-grandpa = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm" }
sc-consensus-manual-seal = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm" }
sc-executor = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm" }
sc-keystore = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm" }
sc-network = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm" }
sc-network-common = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm" }
sc-network-sync = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm" }
sc-offchain = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm" }
sc-rpc = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm" }
sc-rpc-api = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm" }
sc-service = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm", default-features = false }
sc-telemetry = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm" }
sc-transaction-pool = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm" }
sc-transaction-pool-api = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm" }
sc-utils = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm" }
# Substrate Primitive
sp-api = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm", default-features = false }
sp-block-builder = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm", default-features = false }
sp-blockchain = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm" }
sp-consensus = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm" }
sp-consensus-aura = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm", default-features = false }
sp-consensus-grandpa = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm", default-features = false }
sp-core = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm", default-features = false }
sp-core-hashing = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm", default-features = false }
sp-core-hashing-proc-macro = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm", default-features = false }
sp-database = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm" }
sp-externalities = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm", default-features = false }
sp-genesis-builder = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm", default-features = false }
sp-inherents = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm", default-features = false }
sp-io = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm", default-features = false }
sp-keyring = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm" }
sp-offchain = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm", default-features = false }
sp-runtime = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm", default-features = false }
sp-runtime-interface = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm", default-features = false }
sp-session = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm", default-features = false }
sp-state-machine = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm", default-features = false }
sp-std = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm", default-features = false }
sp-storage = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm", default-features = false }
sp-timestamp = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm", default-features = false }
sp-transaction-pool = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm", default-features = false }
sp-version = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm", default-features = false }
sp-weights = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm", default-features = false }
# Substrate FRAME
frame-benchmarking = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm", default-features = false }
frame-executive = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm", default-features = false }
frame-support = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm", default-features = false }
frame-system = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm", default-features = false }
frame-system-benchmarking = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm", default-features = false }
pallet-aura = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm", default-features = false }
pallet-balances = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm", default-features = false }
pallet-grandpa = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm", default-features = false }
pallet-sudo = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm", default-features = false }
pallet-timestamp = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm", default-features = false }
pallet-transaction-payment = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm", default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm", default-features = false }
pallet-utility = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm", default-features = false }
# Substrate Utility
frame-benchmarking-cli = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm" }
substrate-build-script-utils = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm" }
substrate-frame-rpc-system = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm" }
substrate-test-runtime-client = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm" }
substrate-wasm-builder = { git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm" }
substrate-prometheus-endpoint = { git = "https://github.com/boolnetwork/substrate", branch = "Bool_Polkadot_v0.9.42" }

# XCM
xcm = { package = "staging-xcm", git = "https://github.com/boolnetwork/polkadot-sdk", branch = "wasm", default-features = false }

# Arkworks
ark-bls12-377 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-bls12-381 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-bw6-761 = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }

# Frontier Client
fc-api = { version = "1.0.0-dev", path = "client/api" }
fc-cli = { version = "1.0.0-dev", path = "client/cli", default-features = false }
fc-consensus = { version = "2.0.0-dev", path = "client/consensus" }
fc-db = { version = "2.0.0-dev", path = "client/db", default-features = false }
fc-mapping-sync = { version = "2.0.0-dev", path = "client/mapping-sync", default-features = false }
fc-rpc = { version = "2.0.0-dev", path = "client/rpc", default-features = false }
fc-rpc-core = { version = "1.1.0-dev", path = "client/rpc-core" }
fc-storage = { version = "1.0.0-dev", path = "client/storage" }
fc-evm-tracing = { version = "0.1.0", path = "client/bool-network/evm-tracing" }
fc-rpc-core-debug = { version = "0.1.0", path = "client/bool-network/rpc-core/debug" }
fc-rpc-core-trace = { version = "0.6.0", path = "client/bool-network/rpc-core/trace" }
fc-rpc-core-txpool = { version = "0.6.0", path = "client/bool-network/rpc-core/txpool" }
fc-rpc-core-types = { version = "0.1.0", path = "client/bool-network/rpc-core/types" }
fc-rpc-debug = { version = "0.1.0", path = "client/bool-network/rpc/debug" }
fc-rpc-trace = { version = "0.1.0", path = "client/bool-network/rpc/trace" }
fc-rpc-txpool = { version = "0.1.0", path = "client/bool-network/rpc/txpool" }
# Frontier Primitive
fp-account = { version = "1.0.0-dev", path = "primitives/account", default-features = false }
fp-consensus = { version = "2.0.0-dev", path = "primitives/consensus", default-features = false }
fp-dynamic-fee = { version = "1.0.0", path = "primitives/dynamic-fee", default-features = false }
fp-ethereum = { version = "1.0.0-dev", path = "primitives/ethereum", default-features = false }
fp-evm = { version = "3.0.0-dev", path = "primitives/evm", default-features = false }
fp-rpc = { version = "3.0.0-dev", path = "primitives/rpc", default-features = false }
fp-self-contained = { version = "1.0.0-dev", path = "primitives/self-contained", default-features = false }
fp-storage = { version = "2.0.0", path = "primitives/storage", default-features = false }
fp-ext = { version = "0.1.0", path = "primitives/bool-network/ext", default-features = false }
fp-rpc-debug = { version = "0.1.0", path = "primitives/bool-network/rpc/debug", default-features = false }
fp-rpc-evm-tracing-events = { version = "0.1.0", path = "primitives/bool-network/rpc/evm-tracing-events", default-features = false }
fp-rpc-txpool = { version = "0.6.0", path = "primitives/bool-network/rpc/txpool", default-features = false }
# Frontier Runtime
evm-tracer = { version = "0.1.0", path = "runtime/evm-tracer", default-features = false }
# Frontier FRAME
pallet-base-fee = { version = "1.0.0", path = "frame/base-fee", default-features = false }
pallet-dynamic-fee = { version = "4.0.0-dev", path = "frame/dynamic-fee", default-features = false }
pallet-ethereum = { version = "4.0.0-dev", path = "frame/ethereum", default-features = false }
pallet-evm = { version = "6.0.0-dev", path = "frame/evm", default-features = false }
pallet-evm-chain-id = { version = "1.0.0-dev", path = "frame/evm-chain-id", default-features = false }
pallet-evm-precompile-modexp = { version = "2.0.0-dev", path = "frame/evm/precompile/modexp", default-features = false }
pallet-evm-precompile-sha3fips = { version = "2.0.0-dev", path = "frame/evm/precompile/sha3fips", default-features = false }
pallet-evm-precompile-simple = { version = "2.0.0-dev", path = "frame/evm/precompile/simple", default-features = false }
pallet-evm-test-vector-support = { version = "1.0.0-dev", path = "frame/evm/test-vector-support" }
pallet-hotfix-sufficients = { version = "1.0.0", path = "frame/hotfix-sufficients", default-features = false }
# Frontier Template
frontier-template-runtime = { path = "template/runtime", default-features = false }
# Frontier Utility
precompile-utils = { path = "precompiles", default-features = false }

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"

[profile.production]
inherits = "release"
# Sacrifice compile speed for execution speed by using optimization flags:
# https://doc.rust-lang.org/rustc/linker-plugin-lto.html
lto = true
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1
