[package]
name = "fc-evm-tracing"
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"

[dependencies]
ethereum-types = { workspace = true, features = ["std"] }
hex = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true }

fp-rpc-debug = { workspace = true, features = ["std"] }
fp-rpc-evm-tracing-events = { workspace = true, features = ["std"] }

# Substrate
parity-scale-codec = { workspace = true, features = ["std"] }
sp-std = { workspace = true, features = ["std"] }
