[package]
name = "fp-ext"
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"

[dependencies]
ethereum-types = { workspace = true }

# Frontier
fp-rpc-evm-tracing-events = { workspace = true }

# Substrate
parity-scale-codec = { workspace = true }
sp-externalities = { workspace = true }
sp-runtime-interface = { workspace = true }
sp-std = { workspace = true }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"ethereum-types/std",
	"fp-rpc-evm-tracing-events/std",
	"sp-externalities/std",
	"sp-runtime-interface/std",
	"sp-std/std",
]
