[package]
name = "fc-rpc-core-txpool"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/boolnetwork/frontier"
version = "0.6.0"

[dependencies]
ethereum = { workspace = true, features = ["std", "with-codec"] }
ethereum-types = { workspace = true, features = ["std"] }
jsonrpsee = { workspace = true, features = ["macros", "server"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Frontier
fc-rpc-core = { workspace = true }
