[package]
name = "fc-rpc-core-types"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/boolnetwork/frontier"
version = "0.1.0"

[dependencies]
ethereum-types = { workspace = true, features = ["std"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
